changed display row, fixed '95 NY:

--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1995_index</td>\n",
        "      <td>monarchs1995</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1995_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1995_index  monarchs1995         4   \n",
+       "0  index  ix_monarchs1995_index  monarchs1995         3   \n",
        "1  table           monarchs1995  monarchs1995         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -117,7 +117,7 @@
        "1  CREATE TABLE \"monarchs1995\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "10   10            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "9                  Chinqua,  Mexico  1445.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "9       Andover        KS"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -676,25 +676,277 @@
        "      <td>Chinqua</td>\n",
        "      <td>Michoacán</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Chinqua</td>\n",
+       "      <td>Michoacán</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Carrizo Springs</td>\n",
+       "      <td>TX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Rock Island</td>\n",
+       "      <td>IL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Waurika</td>\n",
+       "      <td>OK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Westbrook e</td>\n",
+       "      <td>CT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Arkansas City</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Wappinger Falls</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Roxboroug h</td>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>El Dorado</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Lyons</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Worcester</td>\n",
+       "      <td>MA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Lower South .Hampton Township</td>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Bellevue State Park Bellevue</td>\n",
+       "      <td>IA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Canton</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Minneapol is</td>\n",
+       "      <td>MN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Garland</td>\n",
+       "      <td>TX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Keansburg</td>\n",
+       "      <td>NJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Topeka</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Cape May Pt</td>\n",
+       "      <td>NJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>NJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Cape May</td>\n",
+       "      <td>NJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Lawrence</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>MD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Lewisburg</td>\n",
+       "      <td>WV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Mifflin- burg</td>\n",
+       "      <td>PA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Andover</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>St Cloud</td>\n",
+       "      <td>MN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Salina</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Austin</td>\n",
+       "      <td>TX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Wamego</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Clinton- ville</td>\n",
+       "      <td>WI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Wichita</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Olathe</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Wamego</td>\n",
+       "      <td>KS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Stillwater</td>\n",
+       "      <td>MN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Corpus Christi</td>\n",
+       "      <td>TX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Gaithers- burg</td>\n",
+       "      <td>MD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Austin</td>\n",
+       "      <td>TX</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Oakdale</td>\n",
+       "      <td>MN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>20 miles W of Iowa City</td>\n",
+       "      <td>IA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Brookline</td>\n",
+       "      <td>NH</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              report_city Report State\n",
-       "0       El Rosario colony    Michoacán\n",
-       "1       El Rosario colony    Michoacán\n",
-       "2       El Rosario colony    Michoacán\n",
-       "3                 Chinqua    Michoacán\n",
-       "4                 Chinqua    Michoacán\n",
-       "5          Sierra Chinqua    Michoacán\n",
-       "6                 Chinqua    Michoacán\n",
-       "7  Herrada or Las Palomas    Michoacán\n",
-       "8       El Rosario colony    Michoacán\n",
-       "9                 Chinqua    Michoacán"
+       "                      report_city Report State\n",
+       "0               El Rosario colony    Michoacán\n",
+       "1               El Rosario colony    Michoacán\n",
+       "2               El Rosario colony    Michoacán\n",
+       "3                         Chinqua    Michoacán\n",
+       "4                         Chinqua    Michoacán\n",
+       "5                  Sierra Chinqua    Michoacán\n",
+       "6                         Chinqua    Michoacán\n",
+       "7          Herrada or Las Palomas    Michoacán\n",
+       "8               El Rosario colony    Michoacán\n",
+       "9                         Chinqua    Michoacán\n",
+       "10                        Chinqua    Michoacán\n",
+       "11                Carrizo Springs           TX\n",
+       "12                    Rock Island           IL\n",
+       "13                        Waurika           OK\n",
+       "14                    Westbrook e           CT\n",
+       "15                  Arkansas City           KS\n",
+       "16                Wappinger Falls           NY\n",
+       "17                    Roxboroug h           PA\n",
+       "18                      El Dorado           KS\n",
+       "19                          Lyons           KS\n",
+       "20                      Worcester           MA\n",
+       "21  Lower South .Hampton Township           PA\n",
+       "22   Bellevue State Park Bellevue           IA\n",
+       "23                      Manhattan           KS\n",
+       "24                         Canton           KS\n",
+       "25                   Minneapol is           MN\n",
+       "26                        Garland           TX\n",
+       "27                      Keansburg           NJ\n",
+       "28                         Topeka           KS\n",
+       "29                    Cape May Pt           NJ\n",
+       "30                       Cape May           NJ\n",
+       "31                       Cape May           NJ\n",
+       "32                       Lawrence           KS\n",
+       "33                          Ridge           MD\n",
+       "34                      Lewisburg           WV\n",
+       "35                  Mifflin- burg           PA\n",
+       "36                        Andover           KS\n",
+       "37                       St Cloud           MN\n",
+       "38                         Salina           KS\n",
+       "39                         Austin           TX\n",
+       "40                         Wamego           KS\n",
+       "41                 Clinton- ville           WI\n",
+       "42                        Wichita           KS\n",
+       "43                         Olathe           KS\n",
+       "44                         Wamego           KS\n",
+       "45                     Stillwater           MN\n",
+       "46                 Corpus Christi           TX\n",
+       "47                 Gaithers- burg           MD\n",
+       "48                         Austin           TX\n",
+       "49                        Oakdale           MN\n",
+       "50        20 miles W of Iowa City           IA\n",
+       "51                      Brookline           NH"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +957,8 @@
     "df3.columns = ['report_city', 'Report State']\n",
     "df3['Report State'] = df3['Report State'].str.strip()\n",
     "df3.loc[df3['Report State'] == 'Mexico', 'Report State'] = 'Michoacán'\n",
-    "df3.head(10)"
+    "df3.loc[df3['Report State'] == 'NY:', 'Report State'] = 'NY'\n",
+    "df3"
    ]
   },
   {
@@ -717,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +1031,7 @@
        "4         MEXICO"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +1173,7 @@
        "9       Sep       24     1995  Sep 24 1995"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1319,7 @@
        "9       Mar              1996    Mar  1996"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1547,7 @@
        "      <td>AO 022</td>\n",
        "      <td>NH</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NY:</td>\n",
+       "      <td>NY</td>\n",
        "      <td>USA</td>\n",
        "      <td>Sep 22 1995</td>\n",
        "      <td>152.0</td>\n",
@@ -1671,7 +1924,7 @@
        "13  AS 610        KS  Sep 20 1995           OK            USA   Oct 4 1995   \n",
        "14  AU 652        NY  Sep 29 1995           CT            USA  Oct 12 1995   \n",
        "15  CG 235        KS  Sep 18 1995           KS            USA  Sep 29 1995   \n",
-       "16  AO 022        NH          NaN          NY:            USA  Sep 22 1995   \n",
+       "16  AO 022        NH          NaN           NY            USA  Sep 22 1995   \n",
        "17  CM 577        PA  Oct 12 1995           PA            USA  Oct 27 1995   \n",
        "18  BO 125        KS  Sep 22 1995           KS            USA  Sep 23 1995   \n",
        "19  CK 683        KS  Sep 20 1995           KS            USA  Sep 25 1995   \n",
@@ -1763,7 +2016,7 @@
        "51     NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1813,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +2083,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
