--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -9,21 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".output {\n",
+       "    flex-direction: row;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import plotly as py\n",
     "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "import sqlite3\n",
     "import os\n",
-    "from IPython.display import IFrame"
+    "from IPython.display import IFrame, HTML\n",
+    "CSS = \"\"\"\n",
+    ".output {\n",
+    "    flex-direction: row;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "HTML('<style>{}</style>'.format(CSS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +106,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +265,7 @@
        "8    8          Season       TEXT        0       None   0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +313,224 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tag_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM combine GROUP BY `Tag State` ORDER BY `Recovered Tags`DESC', db)\n",
-    "#recover_tally = pd.read_sql('SELECT `Report State`, COUNT(*) AS \"Recovered Tags\" FROM monarchs1994 GROUP BY `Report State` ORDER BY `Report State`', db)"
+    "#### How many tags were recovered from each state & How many tags did each state recover"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tag State</th>\n",
+       "      <th>Recovered Tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>IA</td>\n",
+       "      <td>573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MN</td>\n",
+       "      <td>479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Unknown Origin</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>IL</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>OH</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Tag State  Recovered Tags\n",
+       "0              KS             776\n",
+       "1              IA             573\n",
+       "2              MN             479\n",
+       "3              TX             388\n",
+       "4              OK             185\n",
+       "5  Unknown Origin             170\n",
+       "6              SD             133\n",
+       "7              NE             119\n",
+       "8              IL             100\n",
+       "9              OH              91"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Report State</th>\n",
+       "      <th>Reported Tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Michoacán</td>\n",
+       "      <td>3263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TX</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MN</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PA</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>IA</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FL</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Report State  Reported Tags\n",
+       "0    Michoacán           3263\n",
+       "1       Mexico             56\n",
+       "2           TX             54\n",
+       "3           KS             48\n",
+       "4           MN             36\n",
+       "5           NY             30\n",
+       "6           NJ             28\n",
+       "7           PA             22\n",
+       "8           IA             17\n",
+       "9           FL             16"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "tag_tally = pd.read_sql('SELECT `Tag State`, COUNT(*) AS \"Recovered Tags\" FROM combine GROUP BY `Tag State` ORDER BY `Recovered Tags`DESC', db)\n",
+    "recover_tally = pd.read_sql('SELECT `Report State`, COUNT(*) AS \"Reported Tags\" FROM combine GROUP BY `Report State` ORDER BY `Reported Tags`DESC', db)\n",
+    "tag_tally.loc[tag_tally['Tag State'].isnull(), 'Tag State'] = 'Unknown Origin'\n",
+    "recover_tally.loc[recover_tally['Report State'].isnull(), 'Report State'] = 'Unknown'\n",
+    "display(tag_tally.head(10))\n",
+    "display(recover_tally.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +539,7 @@
        "'file://C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\temp-plot.html'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +551,7 @@
     "    locationmode='USA-states',\n",
     "    autocolorscale = False,\n",
     "    colorscale = ['Rainbow'],\n",
-    "    z=state_tally['Recovered Tags'])\n",
+    "    z=tag_tally['Recovered Tags'])\n",
     "\n",
     "\n",
     "lyt = dict(geo=dict(scope='north america'))\n",
@@ -338,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -355,10 +586,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2560fc1a608>"
+       "<IPython.lib.display.IFrame at 0x20cb53ea608>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
