plot.ly is giving me a headache

--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,12 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read CSV for each year"
+    "### Read pkl for each year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "8    8          Season       TEXT        0       None   0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -529,8 +529,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of Recovered Monarch Butterflies per State and Season"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2001\n",
+    "monarchs2001_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs2001 GROUP BY `Tag State`', db)\n",
+    "monarchs2001_tally.loc[monarchs2001_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#2000\n",
+    "monarchs2000_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs2000 GROUP BY `Tag State`', db)\n",
+    "monarchs2000_tally.loc[monarchs2000_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1999\n",
+    "monarchs1999_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1999 GROUP BY `Tag State`', db)\n",
+    "monarchs1999_tally.loc[monarchs1999_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1998\n",
+    "monarchs1998_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1998 GROUP BY `Tag State`', db)\n",
+    "monarchs1998_tally.loc[monarchs1998_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1997\n",
+    "monarchs1997_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1997 GROUP BY `Tag State`', db)\n",
+    "monarchs1997_tally.loc[monarchs1997_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1996\n",
+    "monarchs1996_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1996 GROUP BY `Tag State`', db)\n",
+    "monarchs1996_tally.loc[monarchs1996_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1995\n",
+    "monarchs1995_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1995 GROUP BY `Tag State`', db)\n",
+    "monarchs1995_tally.loc[monarchs1995_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'\n",
+    "#1994\n",
+    "monarchs1994_tally = pd.read_sql('SELECT `Tag State` AS tag_state, COUNT(*) AS \"recovered_tags\" FROM monarchs1994 GROUP BY `Tag State`', db)\n",
+    "monarchs1994_tally.loc[monarchs1994_tally['tag_state'].isnull(), 'tag_state'] = 'Unknown Origin'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-27-6fb28ed3d949>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-27-6fb28ed3d949>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    lyt = dict(title = 'Monarch Butterflies Recovered Each Season',\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "trace1 = go.Scatter(\n",
+    "                    x = monarchs2001_tally.tag_state,\n",
+    "                    y = monarchs2001_tally.recovered_tags,\n",
+    "                    mode = \"lines\",\n",
+    "                    name = \"2001 Season\",\n",
+    "                    marker = dict(color = 'rgba(16, 112, 2, 0.8)'),\n",
+    "                    \n",
+    "trace2 = go.Scatter(\n",
+    "                    x = monarchs2000_tally.tag_state,\n",
+    "                    y = monarchs2000_tally.recovered_tags,\n",
+    "                    mode = \"lines\",\n",
+    "                    name = \"2000 Season\",\n",
+    "                    marker = dict(color = 'rgba(16, 112, 2, 0.8)'),\n",
+    "    \n",
+    "data = [trace1, trace2]\n",
+    "lyt = dict(title = 'Monarch Butterflies Recovered Each Season',\n",
+    "              xaxis= dict(title= 'Tag State', ticklen= 5, zeroline= True)\n",
+    "              )\n",
+    "fig = dict(data = data, layout = layout)\n",
+    "iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +616,7 @@
        "'file://C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\temp-plot.html'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,31 +646,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"1000\"\n",
-       "            height=\"600\"\n",
-       "            src=\"https://app.powerbi.com/reportEmbed?reportId=96d602f4-ad60-4a7b-96b0-a92b0913e382&autoAuth=true&ctid=f2e33951-1ec4-4c72-b2bf-a4f4671d64af&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtYy1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x20cb53ea608>"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "powerBiEmbed = 'https://app.powerbi.com/reportEmbed?reportId=96d602f4-ad60-4a7b-96b0-a92b0913e382&autoAuth=true&ctid=f2e33951-1ec4-4c72-b2bf-a4f4671d64af&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtYy1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9'\n",
     "IFrame(powerBiEmbed, width=1000, height=600)"
