cleaned data folder

--- a/Monarch-Butterfly-Migration.ipynb
+++ b/Monarch-Butterfly-Migration.ipynb
@@ -78,14 +78,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monarchs2001 = pd.read_pickle(\"Data\\Monarchs2001.pkl\")\n",
-    "monarchs2000 = pd.read_pickle(\"Data\\Monarchs2000.pkl\")\n",
-    "monarchs1999 = pd.read_pickle(\"Data\\Monarchs1999.pkl\")\n",
-    "monarchs1998 = pd.read_pickle(\"Data\\Monarchs1998.pkl\")\n",
-    "monarchs1997 = pd.read_pickle(\"Data\\Monarchs1997.pkl\")\n",
-    "monarchs1996 = pd.read_pickle(\"Data\\Monarchs1996.pkl\")\n",
-    "monarchs1995 = pd.read_pickle(\"Data\\Monarchs1995.pkl\")\n",
-    "monarchs1994 = pd.read_pickle(\"Data\\Monarchs1994.pkl\")"
+    "monarchs2001 = pd.read_pickle(\"Data/pkl/Monarchs2001.pkl\")\n",
+    "monarchs2000 = pd.read_pickle(\"Data/pkl/Monarchs2000.pkl\")\n",
+    "monarchs1999 = pd.read_pickle(\"Data/pkl/Monarchs1999.pkl\")\n",
+    "monarchs1998 = pd.read_pickle(\"Data/pkl/Monarchs1998.pkl\")\n",
+    "monarchs1997 = pd.read_pickle(\"Data/pkl/Monarchs1997.pkl\")\n",
+    "monarchs1996 = pd.read_pickle(\"Data/pkl/Monarchs1996.pkl\")\n",
+    "monarchs1995 = pd.read_pickle(\"Data/pkl/Monarchs1995.pkl\")\n",
+    "monarchs1994 = pd.read_pickle(\"Data/pkl/Monarchs1994.pkl\")"
    ]
   },
   {
