added img folder

--- a/Data/Monarchs_1995_cleanup.ipynb
+++ b/Data/Monarchs_1995_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1995.db\")"
+    "db = sqlite3.connect(\"db/Monarchs1995.db\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1995 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/1995 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs1995\", db, if_exists=\"replace\")\n",
